@@ -1,5 +1,7 @@
 *SVN*
 
+* Add support in routes for semicolon delimited "subpaths", like /books/:id;:action [Jamis Buck]
+
 * Change link_to_function and button_to_function to (optionally) take an update_page block instead of a JavaScript string. Closes #4804. [zraii@comcast.net, Sam Stephenson]
 
 * Fixed that remote_form_for can leave out the object parameter and default to the instance variable of the object_name, just like form_for [DHH]
